:goal_net: Add CV - WIP

--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tommy Nguyen | Kubernetes Enthusiast</title>
+        <title>Harrison Dam | DevOps And Cloud Enthusiast</title>
         <link href="https://netdna.bootstrapcdn.com/bootswatch/3.1.1/readable/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" href="favicon.ico" type="image/png" />
 <style type="text/css">
@@ -20,19 +20,19 @@
 </head>
 <head>
 <meta charset="utf-8">
-<title>Tommy (Tuan) Nguyen | DevOps Engineer</title>
+<title>Harrison (Hai) Dam| DevOps Engineer</title>
 
 </head>
 <body>
     <div class="container">
-        <h1>Tommy (Tuan) Nguyen</h1>
+        <h1>Harrison (Hai) Dam</h1>
 
 <h2>DevOps Engineer</h2>
 
 <blockquote>
-  <p><a href="mailto:me@tuannvm.com">me@tuannvm.com</a></p>
+  <p><a href="mailto:me@tuannvm.com">haidv.ict@gmail.com</a></p>
   
-  <p><a href="https://tuannvm.com">https://tuannvm.com</a></p>
+  <p><a href="https://tuannvm.com">https://haidv.tech</a></p>
 </blockquote>
 
 <hr />
@@ -46,7 +46,7 @@
 </dl></li>
 <li><dl>
 <dt>DevOps</dt>
-<dd>Implement CI/CD pipline, chatops, gitops, &#8230;</dd>
+<dd>Implement CI/CD pipline, Infrastructure as code with terraform, chatops, gitops, &#8230;</dd>
 </dl></li>
 <li><dl>
 <dt>SRE</dt>
@@ -58,7 +58,7 @@
 
 <ul>
 <li>Kubernetes</li>
-<li>AWS</li>
+<li>AWS/GCP</li>
 <li>Golang</li>
 <li>Python</li>
 <li>Shell</li>
@@ -71,96 +71,88 @@
 <ul>
 <li>Certified Kubernetes Administrator (CKA)</li>
 <li>Certified Kubernetes Application Developer (CKAD)</li>
-<li>IELTS band 7.0</li>
-<li>Microsoft® Certified Professional</li>
 <li>LPIC-2</li>
-<li>Novell Certified Linux Administrator (Novell CLA)</li>
-<li>SUSE Linux Enterprise 11</li>
-<li>CCNP Switch</li>
-<li>CCNP Route</li>
+<li>AWS Solution Architect Professional</li>
+<li>AWS Solution Architect Associate</li>
+<li>Google Cloud Professional</li>
 </ul>
 
 <h3 id="experience">Experience</h3>
 
 <dl>
-<dt><a href="https://www.honestbee.com">Honestbee</a> - Singapore</dt>
+<dt><a href="https://linagora.com">Linagora</a> - France</dt>
 <dd>
-<p><em>DevOps Engineer</em></p>
+<p><em>Senior DevOps Engineer</em></p>
 </dd>
 
-<dd><strong>Jul 2018 - Present</strong></dd>
+<dd><strong>Feb 2020 - Present</strong></dd>
 </dl>
 
 <ul>
-<li>Maintain &amp; Operate a system which server 500k+ customers accross 6 countries.</li>
-<li>Successfully migrate backend application from legacy Elastic Beanstalk platform to Kubernetes.</li>
-<li>Being an active contributor for Cloud Native Computing Foundation (CNCF)</li>
-<li>Certified Kubernetes Administrator (CKA) &amp; Certified Kubernetes Application Developer (CKAD)</li>
+<li>Maintain &amp; Operate a OpenPaas system which server 500k+ customers accross 6 countries.</li>
 <li>Implement centralized secret management for kubernetes clusters using vault.</li>
-<li>Integrate OpenID access management with kubnernetes, which allow developers using github account to gain access to cluster.</li>
-<li>Develop a framework based on kops to allow cluster creation with just a few steps.</li>
+<li>Develop a framework based on terraform, ansible, helm to allow cluster creation with just a few steps.</li>
 <li>Write several tools for internal usage &amp; cluster management.</li>
 </ul>
 
 <dl>
-<dt><a href="https://clickmedix.com">Clickmedix</a> - HCMC, Vietnam</dt>
+<dt><a href="https://tomochain.com">Tomochain</a> - HN, Vietnam</dt>
 <dd>
-<p><em>DevOps Lead</em></p>
+<p><em>Senior DevOps Engineer</em></p>
 </dd>
 
-<dd><strong>July 2016 - Jun 2017</strong></dd>
+<dd><strong>Nov 2018 - Jan 2020</strong></dd>
 </dl>
 
 <ul>
-<li>Be responsible for an E-healthcare system which serve 100+ hospital accross the world.</li>
-<li>Migrated from a manual deployment workflow to fully-automated CI/CD pipeline using Jenkins.</li>
-<li>Optimized resource usage, thus greatly reduce operation cost.</li>
+<li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
+<li>Develop DevOps software from design specifications</li>
+<li>Perform code reviews, code refactors.</li>
+<li>Plan, implement and document unit/functional/intergration tests.</li>
+<li>Contribute idea for system architecture and design decisions.</li>
+<li>Supported multiple outsourcing projects.</li>
 </ul>
 
 <dl>
-<dt><a href="https://www.cogini.com/" title="Cogini Hong Kong Limited">Cogini Hong Kong Limited</a> - HCMC, Vietnam</dt>
+<dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Copenhagen, Denmark</dt>
 <dd>
-<p><em>System Manager</em></p>
+<p><em>Senior DevOps Engineer</em></p>
 </dd>
 
-<dd><strong>February 2016 – July 2016</strong></dd>
+<dd><strong>Feb 2018 – Nov 2018</strong></dd>
 </dl>
 
 <ul>
-<li>Mainly focused on cloud computing (Amazon web services, Google cloud platform).</li>
-<li>Supported multiple outsourcing projects.</li>
-<li>Planned and implement automatic deployment service, apply to production systems</li>
+<li>Work closely with Development, QA and Production teams to design, implement and administer DevOps solution for .Net/Java/JS Family/React Native/Swift builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
+<li>Developed automation and deployment utilities using Bash, Shell, Python, NodeJS.</li>
 <li>Got familiar with CI/CD process.</li>
 <li>Ensured services comply to predefined SLA.</li>
-<li>Monitored system metrics &amp; stats 24/7.</li>
 <li>Make sure customer&#8217;s servers comply to all security rules &amp; polices.</li>
 </ul>
 
 <dl>
-<dt><a href="https://www.haravan.com" title="Haravan Technologies JSC">Haravan Technologies JSC</a> - HCMC, Vietnam</dt>
+<dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - HN, Vietnam</dt>
 <dd>
-<p><em>Senior System &amp; Network Engineer</em></p>
+<p><em>DevOps Engineer &amp; AWS Architect</em></p>
 </dd>
 
 <dd><strong>July 2014 – January 2016</strong></dd>
 </dl>
 
 <ul>
-<li>Deployed System, Network Infrastructure for a newly-formed startup.</li>
+<li>Picking the right AWS services for the application.</li>
 <li>Utilized open source softwares (MongoDB, ElasticSearch, Nginx, Ansible&#8230;)</li>
-<li>Setup tools to monitor &amp; handle attack from outside (DDOS, Flood, Injection&#8230;)</li>
-<li>Implemented 2-step authentication on Windows, Unix, Web.</li>
-<li>Integrate LDAP with internal services.</li>
-<li>Migrate part of the current running system to Azure for saving cost.</li>
+<li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
+<li>Developing with RESTful API interfaces.</li>
 <li>Get familiar with AWS services.</li>
 <li>Monitoring infrastructure with various tools, including: PRTG, Statsd &amp; Graphite, Splunk, own-developed tools&#8230;</li>
-<li>Spent a lot of time with Haproxy, Dnsmasq, Dns-unblocking technique.</li>
-<li>Wrote several admin tools using Node.js, shellscript…</li>
+<li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
+<li>General troubleshooting and debugging</li>
 <li>Began to focus more on microservices (Docker, CoreOS&#8230;), steadily “dockerize” services and deploy them to production.</li>
 </ul>
 
 <dl>
-<dt><a href="http://mecorp.vn" title="Mobile Entertainment Corporation">Mobile Entertainment Corporation</a> - HCMC, Vietnam</dt>
+<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">System Administrator Leader & Infrastructure Manager</a> - HN, Vietnam</dt>
 <dd>
 <p><em>System &amp; Network Engineer</em></p>
 </dd>
@@ -206,7 +198,7 @@
 
 <h3 id="education">Education</h3>
 
-<p>Vietnam National University - Ho Chi Minh City University of Science (HCMUS)</p>
+<p>Vietnam National University - Hanoi University of Science (HCMUS)</p>
 
 <dl>
 <dt><strong>Electronics &amp; Telecommunications</strong></dt>
