:goal_net: Add CV htlm

--- a/cv.html
+++ b/cv.html
@@ -30,9 +30,9 @@
 <h2>DevOps Engineer</h2>
 
 <blockquote>
-  <p><a href="mailto:me@tuannvm.com">haidv.ict@gmail.com</a></p>
+  <p><a href="mailto:haidv.icy@gmail.com">haidv.ict@gmail.com</a></p>
   
-  <p><a href="https://tuannvm.com">https://haidv.tech</a></p>
+  <p><a href="https://haidv.tech">https://haidv.tech</a></p>
 </blockquote>
 
 <hr />
@@ -157,54 +157,51 @@
 <p><em>System &amp; Network Engineer</em></p>
 </dd>
 
-<dd><strong>April 2013 – June 2014</strong></dd>
+<dd><strong>April 2016 – Apr 2017</strong></dd>
 </dl>
 
 <ul>
-<li>Rebuilt appstore system.</li>
-<li>Scan security for newly-deployed services.</li>
-<li>Built download system, which serve 1000+ concurent connection.</li>
-<li>Wrote several scripts for automation.</li>
-<li>Setup &amp; configured access point, modem, router, switch&#8230;</li>
-<li>Deployed “Wifi advertising platform” which covered 100+ coffee shops.</li>
-<li>Implemented open source log system (up to millions record per day) using ELK stack.</li>
-<li>Configured HA &amp; load balancing environment (MySQL master – slave, HA Proxy, LVS)</li>
-<li>Setup CSM (centralized server management) which handle daily basis tasks with an friendly UI.</li>
+<li>System Administrator Leader: install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</li>
+<li>Infrastructure Manager:</li>
+  <ul>
+    <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
+    <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
+    <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems inclusive of LANs, WANs, internet, database, backup recovery, regulatory compliance, security and wireless implementations.</li>
+    <li>Testserverperformanceplusprovidenetworkpresentationstatistics. Reportandpreparestrategiestomaintainserverinfrastructure.</li>
+    <li>Conduct research and recommend changes in services, products, protocols and standards to support development efforts and infrastructure procurement.</li>
+    <li>Negotiate with outsourcers, vendors and contractors for infrastructure-specific products and services secure.</li>
+    <li>Ensure apt security levels on network, infrastructure and servers are maintained.</li>
+  </ul>
 </ul>
 
 <dl>
-<dt><a href="https://fptonline.net/vi/" title="FPT Online Service JSC">FPT Online Service JSC</a> - HCMC, Vietnam</dt>
+<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advance Network System Vietnam</a> - HN, Vietnam</dt>
 <dd>
-<p><em>System Specialist</em></p>
+<p><em>System Integration Engineer</em></p>
 </dd>
 
-<dd><strong>January 2011 – March 2013</strong></dd>
+<dd><strong>Feb 2011 – Apr 2016</strong></dd>
 </dl>
 
 <ul>
-<li>Deployed Citrix XenApp and XenDesktop for 30+ users.</li>
-<li>Configured web server using lighttpd with PHP fastcgi and squid caching system for websites, forums</li>
-<li>Deployed &amp; Operated serveral online games, work a lot with PXE, cygwin in these projects.</li>
-<li>Built email marketing system which supported sending ~200k emails / day.</li>
-<li>Setup email servers for sendo.vn (e-commerce website) and senpay.vn (online payment).</li>
-<li>Maintained &amp; updated FPT Online dns system.</li>
-<li>Deployed centralize source code management (SVN) used by company-wide.</li>
-<li>Be part of the “Content Delivery Network” taskforce, which deploy CDN system for <a href="https://e.vnxpress.net">vnexpress</a>, a top news websites in Vietnam.</li>
-<li>Built custom linux kernel torun OS entirely on RAM.</li>
-<li>Write a lot of shell script to control &amp; maintain servers.</li>
-<li>Built ticket tracking system using OTRS software.</li>
-<li>Centralized log management with graylog2, logstash and elasticsearch.</li>
+<li><em>System Integration Engineer</em>: install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system, OTT voice system with Vinaphone, Mobifone.</li>
+<li><em>Pre-sale Engineer</em>: Responsible for writing presale system plan, and conduct technical communication with customers; Demonstrate and explain bidding plan, and answer questions from onsite customers; Participate in company’s bidding project and responsible for writing, answering questions and responding to bidding documents related to technical issues; product/operation training to partners and final customers.</li>
+<li><em>Post Sale Technical</em>: onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes; preparing the tender documents;.</li>
+<li><em>System Analyst:</em> analyzing, designing and implementing IP Contact Center, Intelligent Transportation/Railways System.</li>
+<li><em>System Engineer</em>: monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file. Design and implement system security and data assurance, cloud computing with Amazon EC2, Google Cloud Platform.</li>
+<li><em>Interactive Voice Response Programmer</em>: java web programming with Genesys tools.</li>
+<li><em>Network Manager</em> : company network planning & adjustment, monitoring of network policy, working with Cisco router and Alcatel-Lucent devices (switch, firewall).</li>
 </ul>
 
 <h3 id="education">Education</h3>
 
-<p>Vietnam National University - Hanoi University of Science (HCMUS)</p>
+<p>Vietnam National University - Hanoi University of Engineering and Technology (UET)</p>
 
 <dl>
-<dt><strong>Electronics &amp; Telecommunications</strong></dt>
-<dd><em>Computer &amp; Embedded System</em></dd>
+<dt><strong>Master of Data Communication &amp; Computer Network</strong></dt>
+<dd><em>Information Technology</em></dd>
 
-<dd><strong>2006 – 2011</strong></dd>
+<dd><strong>2016 – 2019</strong></dd>
 </dl>
 
 <ul>
