--- a/cv.html
+++ b/cv.html
@@ -30,7 +30,7 @@
 <h2>DevOps Engineer</h2>
 
 <blockquote>
-  <p><a href="mailto:haidv.icy@gmail.com">haidv.ict@gmail.com</a></p>
+  <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
   
   <p><a href="https://haidv.tech">https://haidv.tech</a></p>
 </blockquote>
