--- a/cv.html
+++ b/cv.html
@@ -195,7 +195,7 @@
 
 <h3 id="education">Education</h3>
 
-<p>Vietnam National University - Hanoi University of Engineering and Technology (UET)</p>
+<dl><strong>Vietnam National University - Hanoi University of Engineering and Technology (UET)</strong></dl>
 
 <dl>
 <dt><strong>Master of Data Communication &amp; Computer Network</strong></dt>
@@ -208,6 +208,19 @@
 <li>The program is based on the academic system (curriculum, syllabi, homework, examinations…) delivered in English.</li>
 </ul>
 
-    </div>
+<dl><strong>University of Transportation and Communication (UTC)</strong></dl>
+
+<dl>
+<dt><strong>Bachelor of Data Communication &amp; Computer Network</strong></dt>
+<dd><em>Information Technology</em></dd>
+
+<dd><strong>2007 – 2011</strong></dd>
+</dl>
+
+<ul>
+<li>The program is based on the academic system (curriculum, syllabi, homework, examinations…) delivered in English.</li>
+</ul>
+
+</div>
 </body>
 </html>
