--- a/cv.html
+++ b/cv.html
@@ -161,8 +161,8 @@
 </dl>
 
 <ul>
-<li>System Administrator Leader: install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</li>
-<li>Infrastructure Manager:</li>
+<li><em>System Administrator Leader: install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</em></li>
+<li><em>Infrastructure Manager:</em></li>
   <ul>
     <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
     <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
