--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
 </dl>
 
 <ul>
-<li>Maintain &amp; Operate a OpenPaas system which server 500k+ customers accross 6 countries.</li>
+<li>Maintain &amp; Operate a OpenPaas system on OVH</li>
 <li>Implement centralized secret management for kubernetes clusters using vault.</li>
 <li>Develop a framework based on terraform, ansible, helm to allow cluster creation with just a few steps.</li>
 <li>Write several tools for internal usage &amp; cluster management.</li>
