--- a/cv.html
+++ b/cv.html
@@ -161,7 +161,7 @@
 </dl>
 
 <ul>
-<li><em>System Administrator Leader: install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</em></li>
+<li><em>System Administrator Leader:</em> install, implement and operator centralized contact centers over the IP medium (Elastix Asterisk)</li>
 <li><em>Infrastructure Manager:</em></li>
   <ul>
     <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
