--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Hai Dam | Cloud Enthusiast | Kubernetes Enthusiast </title>
+        <title>Harrison (Hai) Dam | Cloud Enthusiast | Kubernetes Enthusiast </title>
 
         <link rel="icon" href="favicon.ico" type="image/png" />
 
