--- a/cv.html
+++ b/cv.html
@@ -175,7 +175,7 @@
 </ul>
 
 <dl>
-<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advance Network System Vietnam</a> - HN, Vietnam</dt>
+<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam</a> - HN, Vietnam</dt>
 <dd>
 <p><em>System Integration Engineer</em></p>
 </dd>
