--- a/cv.html
+++ b/cv.html
@@ -80,7 +80,7 @@
 <h3 id="experience">Experience</h3>
 
 <dl>
-<dt><a href="https://linagora.com">Linagora</a> - France</dt>
+<dt><a href="https://linagora.com">Linagora</a> - Paris, France</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
