--- a/cv.html
+++ b/cv.html
@@ -167,7 +167,7 @@
     <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
     <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
     <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems inclusive of LANs, WANs, internet, database, backup recovery, regulatory compliance, security and wireless implementations.</li>
-    <li>Testserverperformanceplusprovidenetworkpresentationstatistics. Reportandpreparestrategiestomaintainserverinfrastructure.</li>
+    <li>Test server performance plus provide network presentation statistics. Report and prepare strategies to maintain server infrastructure.</li>
     <li>Conduct research and recommend changes in services, products, protocols and standards to support development efforts and infrastructure procurement.</li>
     <li>Negotiate with outsourcers, vendors and contractors for infrastructure-specific products and services secure.</li>
     <li>Ensure apt security levels on network, infrastructure and servers are maintained.</li>
