--- a/cv.html
+++ b/cv.html
@@ -75,6 +75,16 @@
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
 <li>Google Cloud Professional</li>
+<li>Genesys Certified Professional Support</li>
+</ul>
+
+<h3 id="technicalreview">Technical Review for PACKT Publishing</h3>
+
+<ul>
+<li>Hands-On Continuous Integration and Delivery</li>
+<li>Effective DevOps with AWS, Second Edition</li>
+<li>Mastering DevOps Automation</li>
+<li>Mastering Jenkins, Second Edition</li>
 </ul>
 
 <h3 id="experience">Experience</h3>
