--- a/cv.html
+++ b/cv.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Harrison Dam | DevOps And Cloud Enthusiast</title>
+        <title>Hai Dam | DevOps And Cloud Enthusiast</title>
         <link href="https://netdna.bootstrapcdn.com/bootswatch/3.1.1/readable/bootstrap.min.css" rel="stylesheet">
         <link rel="icon" href="favicon.ico" type="image/png" />
 <style type="text/css">
@@ -20,12 +20,12 @@
 </head>
 <head>
 <meta charset="utf-8">
-<title>Harrison (Hai) Dam| DevOps Engineer</title>
+<title>Hai Dam| DevOps Engineer</title>
 
 </head>
 <body>
     <div class="container">
-        <h1>Harrison (Hai) Dam</h1>
+        <h1>Hai Dam</h1>
 
 <h2>DevOps Engineer</h2>
 
