--- a/cv.html
+++ b/cv.html
@@ -153,9 +153,9 @@
 </ul>
 
 <dl>
-<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">System Administrator Leader & Infrastructure Manager</a> - HN, Vietnam</dt>
+<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - HN, Vietnam</dt>
 <dd>
-<p><em>System &amp; Network Engineer</em></p>
+<p><em>System Administrator Leader & Infrastructure Manager</em></p>
 </dd>
 
 <dd><strong>April 2016 – Apr 2017</strong></dd>
