--- a/cv.html
+++ b/cv.html
@@ -194,7 +194,7 @@
 <li><em>Network Manager</em> : company network planning & adjustment, monitoring of network policy, working with Cisco router and Alcatel-Lucent devices (switch, firewall).</li>
 </ul>
 
-<h3 id="technicalreview">Technical Review for PACKT Publishing</h3>
+<h3 id="technicalreview">Technical Review Book for PACKT Publishing</h3>
 
 <ul>
 <li>Hands-On Continuous Integration and Delivery</li>
