--- a/cv.html
+++ b/cv.html
@@ -91,8 +91,7 @@
 
 <ul>
 <li>Maintain &amp; Operate a OpenPaas system on OVH</li>
-<li>Implement centralized secret management for kubernetes clusters using vault.</li>
-<li>Develop a framework based on terraform, ansible, helm to allow cluster creation with just a few steps.</li>
+<li>Develop a framework based on terraform, ansible, helm to allow cluster creation with just a few steps with the best security practice.</li>
 <li>Write several tools for internal usage &amp; cluster management.</li>
 </ul>
 
