--- a/cv.html
+++ b/cv.html
@@ -32,7 +32,7 @@
 <blockquote>
   <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
   <p><a href="tel:+62896706255135">Call me at +84-936-211001</a></p>
-  <p><a href="https://haidv.tech">https://haidv.tech</a></p>
+  <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
 </blockquote>
 
 <hr />
@@ -62,7 +62,7 @@
 <li>Golang</li>
 <li>Python</li>
 <li>Shell</li>
-<li>Linux</li>
+<li>VoIP</li>
 <li>Unix</li>
 </ul>
 
@@ -73,7 +73,6 @@
 <li>LPIC-2</li>
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
-<li>Google Cloud Professional</li>
 <li>Genesys Certified Professional Support</li>
 </ul>
 
