--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@
 
 <ul>
 <li>Maintain &amp; Operate a OpenPaas system on OVH</li>
-<li>Develop a framework based on terraform, ansible, helm to allow cluster creation with just a few steps with the best security practice.</li>
+<li>Develop a framework based on terraform, ansible, helm to allow cluster creation.</li>
 <li>Write several tools for internal usage &amp; cluster management.</li>
 </ul>
 
