--- a/cv.html
+++ b/cv.html
@@ -88,8 +88,8 @@
 </dl>
 
 <ul>
-<li>Maintain &amp; Operate a OpenPaas system on OVH</li>
-<li>Develop a framework based on terraform, ansible, helm to allow cluster creation.</li>
+<li>Maintain &amp; Operate an OpenPaas system on OVH</li>
+<li>Develop a framework based on Terraform, Ansible, Helm to allow cluster creation.</li>
 <li>Write several tools for internal usage &amp; cluster management.</li>
 </ul>
 
