Update resume url

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <div class="tagline">AWS | GCP | CKA | DevOps | Pythonista | Tobe Gopher</div>
                 <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
                 <div class="icons-social">
+                        <a target="_blank" href="https://me.haidv.tech/cv"><i class="far fa-file-user"></i></a>
                         <a target="_blank" href="mailto:haidv.ict@gmail.com"><i class="far fa-envelope-open"></i></a>
                         <a target="_blank" href="https://github.com/naviat"><i class="fab fa-github"></i></a>
                         <a target="_blank" href="https://twitter.com/HaiDV204"><i class="fab fa-twitter"></i></a>
