--- a/cv.html
+++ b/cv.html
@@ -106,9 +106,7 @@
 <li>Deploy &amp; maintain application server, decentralized system in blockchains.</li>
 <li>Develop DevOps software from design specifications</li>
 <li>Perform code reviews, code refactors.</li>
-<li>Plan, implement and document unit/functional/intergration tests.</li>
-<li>Contribute idea for system architecture and design decisions.</li>
-<li>Supported multiple outsourcing projects.</li>
+<li>Planning, implement and document unit/functional/intergration tests.</li>
 </ul>
 
 <dl>
@@ -121,11 +119,8 @@
 </dl>
 
 <ul>
-<li>Work closely with Development, QA and Production teams to design, implement and administer DevOps solution for .Net/Java/JS Family/React Native/Swift builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
-<li>Developed automation and deployment utilities using Bash, Shell, Python, NodeJS.</li>
-<li>Got familiar with CI/CD process.</li>
-<li>Ensured services comply to predefined SLA.</li>
-<li>Make sure customer&#8217;s servers comply to all security rules &amp; polices.</li>
+<li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native/Swift builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
+<li>Developed automation and deployment utilities using Bash, Python.</li>
 </ul>
 
 <dl>
@@ -138,15 +133,11 @@
 </dl>
 
 <ul>
-<li>Picking the right AWS services for the application.</li>
-<li>Utilized open source softwares (MongoDB, ElasticSearch, Nginx, Ansible&#8230;)</li>
 <li>Integrating AWS services with CI/CD tools (CircleCI, Ansible, Chef, Puppet, Salt,TravisCI, Vagrant&#8230;)</li>
 <li>Developing with RESTful API interfaces.</li>
-<li>Get familiar with AWS services.</li>
-<li>Monitoring infrastructure with various tools, including: PRTG, Statsd &amp; Graphite, Splunk, own-developed tools&#8230;</li>
+<li>Monitoring infrastructure with Zabbix, Prometheus, and Grafana </li>
 <li>Programming with AWS APIs (Python, Nodejs), Infrastructure as Code with Terraform.</li>
 <li>General troubleshooting and debugging</li>
-<li>Began to focus more on microservices (Docker, CoreOS&#8230;), steadily “dockerize” services and deploy them to production.</li>
 </ul>
 
 <dl>
@@ -164,11 +155,8 @@
   <ul>
     <li>Design and execute short plus long term strategic plans to assure infrastructure capacity attains current and future needs.</li>
     <li>Develop, execute and oversee procedures, policies and related training plans for project management and infrastructure administration..</li>
-    <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems inclusive of LANs, WANs, internet, database, backup recovery, regulatory compliance, security and wireless implementations.</li>
+    <li>Manage and establish priorities for maintenance, design, development and analysis of entire infrastructure systems.</li>
     <li>Test server performance plus provide network presentation statistics. Report and prepare strategies to maintain server infrastructure.</li>
-    <li>Conduct research and recommend changes in services, products, protocols and standards to support development efforts and infrastructure procurement.</li>
-    <li>Negotiate with outsourcers, vendors and contractors for infrastructure-specific products and services secure.</li>
-    <li>Ensure apt security levels on network, infrastructure and servers are maintained.</li>
   </ul>
 </ul>
 
@@ -182,13 +170,11 @@
 </dl>
 
 <ul>
-<li><em>System Integration Engineer</em>: install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system, OTT voice system with Vinaphone, Mobifone.</li>
-<li><em>Pre-sale Engineer</em>: Responsible for writing presale system plan, and conduct technical communication with customers; Demonstrate and explain bidding plan, and answer questions from onsite customers; Participate in company’s bidding project and responsible for writing, answering questions and responding to bidding documents related to technical issues; product/operation training to partners and final customers.</li>
-<li><em>Post Sale Technical</em>: onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes; preparing the tender documents;.</li>
-<li><em>System Analyst:</em> analyzing, designing and implementing IP Contact Center, Intelligent Transportation/Railways System.</li>
-<li><em>System Engineer</em>: monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file. Design and implement system security and data assurance, cloud computing with Amazon EC2, Google Cloud Platform.</li>
-<li><em>Interactive Voice Response Programmer</em>: java web programming with Genesys tools.</li>
-<li><em>Network Manager</em> : company network planning & adjustment, monitoring of network policy, working with Cisco router and Alcatel-Lucent devices (switch, firewall).</li>
+<li>Install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system, OTT voice system with Vinaphone, Mobifone.</li>
+<li>Writing presale system plan, and conduct technical communication with customers; Demonstrate and explain bidding plan, and answer questions from onsite customers.</li>
+<li>Onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes; preparing the tender documents;.</li>
+<li>Monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file. Design and implement system security and data assurance, cloud computing with Amazon EC2, Google Cloud Platform.</li>
+<li>Java web programming with Genesys tools.</li>
 </ul>
 
 <h3 id="technicalreview">Technical Review Book for PACKT Publishing</h3>
