--- a/cv.html
+++ b/cv.html
@@ -119,7 +119,7 @@
 </dl>
 
 <ul>
-<li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native/Swift builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
+<li>Design, implement and administer DevOps solution for .Net/Java/JS Family/React Native builds using Jenkins/Bitrise.io/Fastlane/CircleCI.</li>
 <li>Developed automation and deployment utilities using Bash, Python.</li>
 </ul>
 
@@ -161,7 +161,7 @@
 </ul>
 
 <dl>
-<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam</a> - HN, Vietnam</dt>
+<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam - VNPT Technology</a> - HN, Vietnam</dt>
 <dd>
 <p><em>System Integration Engineer</em></p>
 </dd>
@@ -170,10 +170,10 @@
 </dl>
 
 <ul>
-<li>Install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system, OTT voice system with Vinaphone, Mobifone.</li>
-<li>Writing presale system plan, and conduct technical communication with customers; Demonstrate and explain bidding plan, and answer questions from onsite customers.</li>
-<li>Onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes; preparing the tender documents;.</li>
-<li>Monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file. Design and implement system security and data assurance, cloud computing with Amazon EC2, Google Cloud Platform.</li>
+<li>Install and implement centralized contact centers over the IP medium (Genesys Platform), TV over IP system with Vinaphone, Mobifone.</li>
+<li>Writing presale system plan; Demonstrate and explain bidding plan, preparing the tender documents and answer questions from onsite customers.</li>
+<li>Onsite support, including break-fix support, preplanned maintenance, machine and parts replacements, installations, moves and equipment changes.</li>
+<li>Monitoring and resolve incidents, support and resolution of VAS, IT and network systems on a 24x7 basis and fine-tuning of the system, backup data, logs, CDR file.</li>
 <li>Java web programming with Genesys tools.</li>
 </ul>
 
