--- a/cv.html
+++ b/cv.html
@@ -79,7 +79,7 @@
 <h3 id="experience">Experience</h3>
 
 <dl>
-<dt><a href="https://linagora.com">Linagora</a> - Paris, France</dt>
+<dt><a href="https://linagora.com">Linagora</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
@@ -110,7 +110,7 @@
 </ul>
 
 <dl>
-<dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Copenhagen, Denmark</dt>
+<dt><a href="https://www.netcompany.com/int" title="Netcompany">Netcompany</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
