--- a/cv.html
+++ b/cv.html
@@ -94,7 +94,7 @@
 </ul>
 
 <dl>
-<dt><a href="https://tomochain.com">Tomochain</a> - HN, Vietnam</dt>
+<dt><a href="https://tomochain.com">Tomochain</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
@@ -124,7 +124,7 @@
 </ul>
 
 <dl>
-<dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - HN, Vietnam</dt>
+<dt><a href="https://co-well.vn/" title="Co-Well">Co-Well</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>DevOps Engineer &amp; AWS Architect</em></p>
 </dd>
@@ -141,7 +141,7 @@
 </ul>
 
 <dl>
-<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - HN, Vietnam</dt>
+<dt><a href="http://taxigroup.com.vn/" title="DEVELOPMENT AND INVESTMENT COOPERATION JSC (IC&D)">IC&D Cooperation</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>System Administrator Leader & Infrastructure Manager</em></p>
 </dd>
@@ -161,7 +161,7 @@
 </ul>
 
 <dl>
-<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam - VNPT Technology</a> - HN, Vietnam</dt>
+<dt><a href="http://www.ansv.vn" title="Advance Network System Vietnam">Advanced Network System Vietnam - VNPT Technology</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>System Integration Engineer</em></p>
 </dd>
