--- a/cv.html
+++ b/cv.html
@@ -59,6 +59,7 @@
 <ul>
 <li>Kubernetes</li>
 <li>AWS/GCP/OpenStack</li>
+<li>VMWare Tanzu</li>
 <li>Golang</li>
 <li>Python</li>
 <li>Shell</li>
@@ -79,12 +80,27 @@
 <h3 id="experience">Experience</h3>
 
 <dl>
+<dt><a href="https://www.fortna.com/">Fortna Inc</a> - Hanoi, Vietnam</dt>
+<dd>
+<p><em>Senior DevOps Engineer</em></p>
+</dd>
+
+<dd><strong>Oct 2020 - Present</strong></dd>
+</dl>
+
+<ul>
+<li>Support the Software Development teams hardware and operational needs to support rapid delivery, particularly in the areas of system provisioning, observability, orchestration, and system deployments;</li>
+<li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability.</li>
+<li>Write several tools for internal usage &amp; cluster management.</li>
+</ul>
+            
+<dl>
 <dt><a href="https://linagora.com">Linagora</a> - Hanoi, Vietnam</dt>
 <dd>
 <p><em>Senior DevOps Engineer</em></p>
 </dd>
 
-<dd><strong>Feb 2020 - Present</strong></dd>
+<dd><strong>Feb 2020 - Oct 2020</strong></dd>
 </dl>
 
 <ul>
