--- a/cv.html
+++ b/cv.html
@@ -33,6 +33,7 @@
   <p><a href="mailto:haidv.ict@gmail.com">haidv.ict@gmail.com</a></p>
   <p><a href="tel:+840936211001">Call me at +84-936-211001</a></p>
   <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
+  <p><a href="https://www.linkedin.com/in/iluisreyes/">References: Luis Reyes - Enterprise Architecture & DevOps</a></p>
 </blockquote>
 
 <hr />
