--- a/cv.html
+++ b/cv.html
@@ -72,6 +72,7 @@
 
 <ul>
 <li>Certified Kubernetes Administrator (CKA)</li>
+<li>Certified Kubernetes Application Developer (CKAD)</li>
 <li>LPIC-2</li>
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
