--- a/cv.html
+++ b/cv.html
@@ -60,7 +60,6 @@
 <ul>
 <li>Kubernetes</li>
 <li>AWS/GCP/OpenStack</li>
-<li>VMWare Tanzu</li>
 <li>Golang</li>
 <li>Python</li>
 <li>Shell</li>
@@ -91,9 +90,13 @@
 </dl>
 
 <ul>
-<li>Support the Software Development teams hardware and operational needs to support rapid delivery, particularly in the areas of system provisioning, observability, orchestration, and system deployments;</li>
-<li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability.</li>
-<li>Write several tools for internal usage &amp; cluster management.</li>
+<li>Support the Software Development team’s hardware and operational needs to support rapid delivery, particularly in the areas of system provisioning, observability, orchestration, and system deployments;</li>
+<li>Establish idempotent CI/CD pipelines to automate configuring, provisioning, packaging, testing, and deployment;</li>
+<li>Configure and deploy GUI front-end visualizations of builds, deployments, tests, telemetry, alerting, errors/logs, and health status;</li>
+<li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
+<li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
+<li>Participate in the troubleshooting of performance and stability issues and recommend solutions to prevent recurrence;<li>
+<li>Apply proper architecture guidelines to ensure highly available services.<li>
 </ul>
             
 <dl>
