--- a/cv.html
+++ b/cv.html
@@ -95,8 +95,8 @@
 <li>Configure and deploy GUI front-end visualizations of builds, deployments, tests, telemetry, alerting, errors/logs, and health status;</li>
 <li>Standardize the processes for managing, maintaining, and securing ad-hoc Linux-based environments to ensure consistent and timely setup, configuration, and availability;</li>
 <li>Draft and maintain detailed, up-to-date technical documentation and user guides;</li>
-<li>Participate in the troubleshooting of performance and stability issues and recommend solutions to prevent recurrence;<li>
-<li>Apply proper architecture guidelines to ensure highly available services.<li>
+<li>Participate in the troubleshooting of performance and stability issues and recommend solutions to prevent recurrence;</li>
+<li>Apply proper architecture guidelines to ensure highly available services.</li>
 </ul>
             
 <dl>
