--- a/cv.html
+++ b/cv.html
@@ -34,6 +34,9 @@
   <p><a href="tel:+840936211001">Call me at +84-936-211001</a></p>
   <p><a href="https://me.haidv.tech">https://me.haidv.tech</a></p>
   <p><a href="https://www.linkedin.com/in/iluisreyes/">References: Luis Reyes - Enterprise Architecture & DevOps</a></p>
+  <p><a href="tel:+813-727-998-2002">Tel: 727-998-2002</a></p>
+
+        
 </blockquote>
 
 <hr />
