--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
         <main>
                 <div class="intro">kubectl explain Hai.D</div>
-                <div class="tagline">AWS | GCP | CKA | DevOps | Pythonista | Tobe Gopher</div>
+                <div class="tagline">AWS | GCP | CKA | CKAD | DevOps | Pythonista | Tobe Gopher</div>
                 <!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
                 <div class="icons-social">
                         <a target="_blank" href="https://me.haidv.tech/cv"><i class="fas fa-file"></i></a>
