--- a/cv.html
+++ b/cv.html
@@ -76,9 +76,13 @@
 <li>Certified Kubernetes Administrator (CKA)</li>
 <li>Certified Kubernetes Application Developer (CKAD)</li>
 <li>LPIC-2</li>
+<li><CCNA</li>
+<li>MCITP</li>
 <li>AWS Solution Architect Professional</li>
 <li>AWS Solution Architect Associate</li>
 <li>Genesys Certified Professional Support</li>
+<li>Getting started with AI on Jetson Nano</li>
+<li>Certified SAFe® 5 Practitioner</li>
 </ul>
 
 <h3 id="experience">Experience</h3>
